# twitter_sentiment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yaml  start.sh
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
airflow_docker/: Dockerfile  requirements.txt
dags/: model_dag.py  stream_dag.py
dags/src/: config.py  logger.py  utils.py
dags/src/raw_data/: raw_data_consumer.py
dags/src/step_0_raw_data/: raw_data_consumer.py  raw_data_producer.py
dags/src/step_1_preprocess_data/: preprocess_data.py
dags/src/step_2_train_model/: predict.py  train_model.py
docs/: index.md  modules.md
notebooks/: twitter_connector.py
runscripts/step_1_get_raw_data/: consume_tweets.py  produce_tweets.py
tests/: test_foo.py
twitter_sentiment/: confg.py  logger.py
twitter_sentiment/raw_data/: raw_data_consumer.py  raw_data_producer.py
